[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpa-codex-auth-sweep"
version = "1.0.0"
description = "A high-performance async Codex Auth credential scanner, packaged as an AI Agent Skill"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "paradoxie"}
]
dependencies = [
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
]

[project.scripts]
codex-scanner = "tp:main"

[tool.setuptools]
py-modules = ["tp"]

